--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,61 @@
+body {
+    background-color: #1F2937;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.logo {
+    margin: 32px;
+    padding: 8px;
+    color: white ;
+    display: flex;
+
+}
+
+.links {
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.links a{
+    text-decoration: none;
+    color: white;
+    margin: 32px;
+    padding: 8px;
+    display: inline-block;
+   
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    margin: 32px;
+    color: #F9FAF8;
+}
+
+.description {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin: 32px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.kick  {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 32px;
+    margin-left: auto;
+    align-self: flex-start;
+}
+
+.cookie {
+    width: 100px;
+    display: flex;
+    margin: 32px;
+    color: white;
+    background-color: #2882f6;
+    border-radius: 5px;
+}
 
