--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
-    background-color: #1F2937;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: wheat;
+    background-color: #373e33;
+    font-family: Roboto, sans-serif;
 }
 
-
-.logo {
+header {
+    display: flex;
+}
+.head-left {
+    
+    justify-content: flex-start;
     margin: 32px;
-    padding: 8px;
+}
+.logo {
+    font-size: 24px;
+    font-weight: bold;
     color: white ;
     display: flex;
+}
 
+.title {
+    margin-top: 75px;
+    color: white;
+}
+
+.description {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.cookie {
+    display: flex;
+    background-color: #3882f6;
+    color: white;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.head-right {
+    margin: 32px;
+    margin-top: 125px;
+    align-items: flex-end;
+}
+
+.kick {
+    width: auto;
+    height: 250px;
 }
 
 .links {
@@ -19,43 +58,13 @@ body {
     right: 0;
 }
 .links a{
-    text-decoration: none;
     color: white;
     margin: 32px;
     padding: 8px;
     display: inline-block;
-   
 }
 
-h1 {
-    font-size: 48px;
-    font-weight: bolder;
-    margin: 32px;
-    color: #F9FAF8;
-}
 
-.description {
-    color: #E5E7EB;
-    font-size: 18px;
-    margin: 32px;
-    display: flex;
-    flex-wrap: wrap;
-}
 
-.kick  {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 32px;
-    margin-left: auto;
-    align-self: flex-start;
-}
 
-.cookie {
-    width: 100px;
-    display: flex;
-    margin: 32px;
-    color: white;
-    background-color: #2882f6;
-    border-radius: 5px;
-}
 
